--- a/package.json
+++ b/package.json
@@ -1,24 +1,53 @@
 {
   "name": "upm-package-populator",
-  "version": "1.0.2",
+  "version": "0.0.0-development",
   "description": "A helper library to cross populate nested Unity packages in a project with NPM data.",
-  "main": "create-dist.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "build": "tsc --project tsconfig.build.json",
+    "lint": "eslint src --ext .js,.ts --max-warnings 0",
+    "commit": "cz",
+    "semantic-release": "semantic-release"
   },
   "author": "Ash Blue",
   "license": "MIT",
   "dependencies": {
-    "copy-dir": "^1.1.0",
-    "del": "^4.1.1",
-    "zip-a-folder": "0.0.8"
+    "del": "^6.0.0",
+    "fs-extra": "^8.1.0",
+    "nanoid": "^3.1.22"
   },
   "devDependencies": {
-    "jest": "^24.8.0"
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
+    "@commitlint/travis-cli": "^12.0.1",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.0",
+    "@semantic-release/npm": "^7.0.10",
+    "@semantic-release/release-notes-generator": "^9.0.2",
+    "@types/fs-extra": "^9.0.9",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.23.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "husky": "^5.2.0",
+    "jest": "^26.6.3",
+    "semantic-release": "^17.4.2",
+    "ts-jest": "^26.5.4",
+    "typescript": "^4.2.3"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ashblue/upm-package-populator.git"
+    "url": "https://github.com/ashblue/upm-package-populator.git"
   },
   "keywords": [
     "unity",
@@ -29,5 +58,10 @@
   "bugs": {
     "url": "https://github.com/ashblue/upm-package-populator/issues"
   },
-  "homepage": "https://github.com/ashblue/upm-package-populator#readme"
+  "homepage": "https://github.com/ashblue/upm-package-populator#readme",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
