--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,6 +9,7 @@ jobs:
         with:
           node-version: '14'
       - run: npm install
+      - uses: wagoid/commitlint-github-action@v2
       - run: npm run lint
       - run: npm run test:coverage
       - run: npm run build
