--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,5 +15,5 @@ jobs:
       - name: Release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: npm run semantic-release
